--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -5,15 +5,12 @@
 }
 
 header {
-  background-color: #47b8f4;
+  position: absolute;
   width: 100%;
-  position: sticky;
-  top: 0;
-  bottom: 0;
   z-index: 100;
   transition: 0.5s all;
   .big-size-container {
-    height: 50px;
+    height: 66px;
     .row {
       .logo {
         display: flex;
@@ -29,7 +26,7 @@ header {
           position: relative;
           li {
             margin-left: 35px;
-            a {
+            .li_a {
               font-size: 18px;
               color: #fff;
               z-index: 1;
@@ -214,125 +211,96 @@ header {
       opacity: 1;
     }
   }
-}
 
-.mobile-container {
-  background-color: white;
-  .row {
-    .search_input {
-      overflow: hidden;
-      visibility: hidden;
-      opacity: 0;
-      position: absolute;
-      top: 30px;
-      left: 50px;
-      transition: 0.3s all;
-      .icon_search {
-        position: absolute;
-        top: 0px;
-        right: 3px;
-      }
-    }
-    .search_input.active {
-      visibility: visible;
-      opacity: 1;
-    }
-    .user_mobile_registration {
-      text-align: start;
-      top: 3%;
-      right: 0;
-      visibility: hidden;
-      opacity: 0;
-      position: absolute;
-      height: max-content;
-      background-color: rgb(255, 255, 255);
-      padding: 0px 30px;
-      transition: 0.3s all;
-      .language {
-        line-height: 0;
-        .image {
-          margin-bottom: 10px;
-        }
-      }
-    }
-    .user_mobile_registration.active {
-      visibility: visible;
-      opacity: 1;
-    }
-  }
-}
-.mobile-menu {
-  overflow: hidden;
-  position: relative;
-  top: -34px;
-  background-color: rgb(255, 255, 255);
-  width: 0px;
-  height: 100vh;
-  transition: 1s;
-  ul {
-    padding: 10px;
-    li {
-      padding: 10px;
-      a {
-        color: black;
-        i.active {
-          transform: rotate(180deg);
-        }
-      }
-    }
-    .acs-icon {
-      display: none;
-    }
-    .acs-icon.active {
-      display: block;
-    }
-    .drone-icon {
-      display: none;
-    }
-    .drone-icon.active {
-      display: block;
-    }
-  }
-}
-
-.mobile-menu.active {
-  position: relative;
-  width: 200px;
-  height: 100vh;
-  top: -34px;
-  background-color: rgb(255, 255, 255);
-  transition: 1s;
-}
-
-.ac {
-  background-color: white;
-  color: black;
-  transition: 0.5s all;
-  .big-size-container {
+  .mobile-container {
+    background-color: white;
+    height: 66px;
     .row {
-      ul {
-        li {
-          a {
-            color: black;
-            &:hover {
-              color: #1d1b1b;
-            }
+      .search_input {
+        overflow: hidden;
+        visibility: hidden;
+        opacity: 0;
+        position: absolute;
+        top: 30px;
+        left: 50px;
+        transition: 0.3s all;
+        .icon_search {
+          position: absolute;
+          top: 0px;
+          right: 3px;
+        }
+      }
+      .search_input.active {
+        visibility: visible;
+        opacity: 1;
+      }
+      .user_mobile_registration {
+        text-align: start;
+        top: 3%;
+        right: 0;
+        visibility: hidden;
+        opacity: 0;
+        position: absolute;
+        height: max-content;
+        background-color: rgb(255, 255, 255);
+        padding: 0px 30px;
+        transition: 0.3s all;
+        .language {
+          line-height: 0;
+          .image {
+            margin-bottom: 10px;
           }
         }
       }
-      .icons {
-        .icon {
-          color: black;
-          &:hover {
-            color: rgb(58, 56, 56);
-          }
-        }
-        .count {
-          color: rgb(53, 52, 52);
-        }
+      .user_mobile_registration.active {
+        visibility: visible;
+        opacity: 1;
       }
     }
   }
+  .mobile-menu {
+    overflow: hidden;
+    position: relative;
+    top: -34px;
+    background-color: rgb(255, 255, 255);
+    width: 0px;
+    height: 100vh;
+    transition: 1s;
+    ul {
+      padding: 10px;
+      li {
+        padding: 10px;
+        a {
+          color: black;
+          i.active {
+            transform: rotate(180deg);
+          }
+        }
+      }
+      .acs-icon {
+        display: none;
+      }
+      .acs-icon.active {
+        display: block;
+      }
+      .drone-icon {
+        display: none;
+      }
+      .drone-icon.active {
+        display: block;
+      }
+    }
+  }
+  
+  .mobile-menu.active {
+    position: relative;
+    width: 200px;
+    height: 100vh;
+    top: -34px;
+    background-color: rgb(255, 255, 255);
+    transition: 1s;
+  }
+
 }
 
 #base {
@@ -615,6 +583,7 @@ header {
     }
   }
 }
+
 #import {
   .animeIcon {
     .image {
@@ -873,9 +842,11 @@ header {
       &:hover {
         .first {
           opacity: 0;
+          transform: rotateY(180deg);
         }
         .second {
           opacity: 1;
+          transform: rotateY(180deg);
         }
       }
       cursor: pointer;
@@ -1370,43 +1341,19 @@ footer {
       }
     }
   }
-}
-
-.secondFooter {
-  background-color: #151515;
-  .box {
-    padding-top: 10px;
-    padding-bottom: 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    .text-img {
-      p {
-        color: white;
-
-        a {
-          text-decoration: none;
-          color: white;
-        }
-      }
-    }
-  }
-  @media only screen and (max-width: 820px) {
-  }
-  @media only screen and (max-width: 391px) {
+  .secondFooter {
+    background-color: #151515;
     .box {
       padding-top: 10px;
       padding-bottom: 10px;
       display: flex;
-      justify-content: center;
+      justify-content: space-between;
       align-items: center;
-      flex-direction: column;
-
+  
       .text-img {
         p {
           color: white;
-
+  
           a {
             text-decoration: none;
             color: white;
@@ -1414,8 +1361,33 @@ footer {
         }
       }
     }
+    @media only screen and (max-width: 820px) {
+    }
+    @media only screen and (max-width: 391px) {
+      .box {
+        padding-top: 10px;
+        padding-bottom: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+  
+        .text-img {
+          p {
+            color: white;
+  
+            a {
+              text-decoration: none;
+              color: white;
+            }
+          }
+        }
+      }
+    }
   }
 }
+
+
 
 #faq {
   background-color: #f2f6f9;
