--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -377,7 +377,7 @@ header {
 
         @media screen and (max-width: 391px) {
           & {
-            content: url("../images/ResponsiveDrone1.png");
+            content: url("../images/responsive_slider1.png");
             width: 100%;
           }
         }
@@ -486,7 +486,7 @@ header {
 
         @media screen and (max-width: 391px) {
           & {
-            content: url("../images/ResponsiveDrone2.png");
+            content: url("../images/responsive_slider2.png");
             width: 100%;
           }
         }
@@ -723,6 +723,7 @@ header {
   }
 
   .item {
+    width: 100%;
     display: flex;
     justify-content: center;
     .detail {
@@ -994,7 +995,7 @@ footer {
     }
   }
   .subs {
-    padding: 30px 10px 30px;
+    padding: 42px 21px;
     border: 1px solid rgba(102, 102, 102, 0.15);
     text-align: center;
     .text {
