--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,16 +114,81 @@ header .big-size-container .row .icons .count {
 }
 header .big-size-container .row .icons .box {
   height: 100vh;
-  visibility: hidden;
-  opacity: 0;
+  width: 0px;
   position: absolute;
   top: 0px;
   right: 0;
   margin: 0 auto;
   background-color: white;
-  overflow-y: scroll;
   transition: 1s;
   z-index: 1;
+  overflow: hidden;
+}
+header .big-size-container .row .icons .box .cart-list {
+  width: 100%;
+  height: 100%;
+}
+header .big-size-container .row .icons .box .cart-list .product-list {
+  overflow-y: scroll;
+  overflow-x: hidden;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+header .big-size-container .row .icons .box .cart-list .product-list li {
+  margin: 0;
+}
+header .big-size-container .row .icons .box .cart-list .product-list li p {
+  margin: 50% auto;
+  text-align: center;
+  color: #adadad;
+}
+header .big-size-container .row .icons .box .cart-bottom {
+  position: sticky;
+  bottom: 0px;
+  width: 100%;
+  height: 30%;
+  border-top: 1px solid #eee;
+  background-color: white;
+}
+header .big-size-container .row .icons .box .cart-bottom ul {
+  line-height: 30px;
+  font-size: 15px;
+  padding: 0;
+  margin: 0;
+}
+header .big-size-container .row .icons .box .cart-bottom ul li {
+  margin: 0;
+  display: flex;
+  justify-content: space-between;
+}
+header .big-size-container .row .icons .box .cart-bottom ul li span:nth-child(even) {
+  font-weight: 500;
+}
+header .big-size-container .row .icons .box .cart-bottom .buttons {
+  width: 100%;
+  padding: 10px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+header .big-size-container .row .icons .box .cart-bottom .buttons button {
+  font-size: 14px;
+  height: 40px;
+  width: 49%;
+  border: none;
+  background-color: #EB4D50;
+  color: white;
+  transition: 0.5s;
+}
+header .big-size-container .row .icons .box .cart-bottom .buttons button:hover {
+  background-color: #232323;
+}
+header .big-size-container .row .icons .box .cart-bottom .buttons button:nth-child(2) {
+  background-color: #232323;
+}
+header .big-size-container .row .icons .box .cart-bottom .buttons button:nth-child(2):hover {
+  background-color: #EB4D50;
 }
 header .big-size-container .row .icons .box .box_device li {
   border-bottom: 1px solid black;
@@ -162,8 +227,7 @@ header .big-size-container .row .icons .box .cart_button_x {
   margin-bottom: 5px;
 }
 header .big-size-container .row .box.active {
-  visibility: visible;
-  opacity: 1;
+  width: 350px;
 }
 header .big-size-container .search_input_large {
   visibility: hidden;
@@ -212,7 +276,7 @@ header .mobile-container .row .search_input {
   visibility: hidden;
   opacity: 0;
   position: absolute;
-  top: 30px;
+  top: 50px;
   left: 50px;
   transition: 0.3s all;
 }
@@ -227,7 +291,7 @@ header .mobile-container .row .search_input.active {
 }
 header .mobile-container .row .user_mobile_registration {
   text-align: start;
-  top: 3%;
+  top: 7%;
   right: 0;
   visibility: hidden;
   opacity: 0;
@@ -251,11 +315,12 @@ header .mobile-container .row .user_mobile_registration.active {
 header .mobile-menu {
   overflow: hidden;
   position: relative;
-  top: -34px;
+  top: 0%;
   background-color: rgb(255, 255, 255);
   width: 0px;
   height: 100vh;
-  transition: 1s;
+  transition: 1s all;
+  z-index: 100;
 }
 header .mobile-menu ul {
   padding: 10px;
@@ -282,12 +347,7 @@ header .mobile-menu ul .drone-icon.active {
   display: block;
 }
 header .mobile-menu.active {
-  position: relative;
   width: 200px;
-  height: 100vh;
-  top: -34px;
-  background-color: rgb(255, 255, 255);
-  transition: 1s;
 }
 
 @media screen and (max-width: 391px) {
