--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -119,16 +119,83 @@ header {
         }
         .box {
           height: 100vh;
-          visibility: hidden;
-          opacity: 0;
+          width: 0px;
           position: absolute;
           top: 0px;
           right: 0;
           margin: 0 auto;
           background-color: white;
-          overflow-y: scroll;
           transition: 1s;
           z-index: 1;
+          overflow: hidden;
+
+          .cart-list{
+            width: 100%;
+            height: 100%;
+            .product-list{
+                overflow-y: scroll;
+                overflow-x: hidden;
+                list-style: none;
+                padding: 0;
+                margin: 0;
+                li{
+                    margin: 0;
+                    p{
+                        margin: 50% auto;
+                        text-align: center;
+                        color: #adadad;
+                    }
+                }
+            }
+        }
+        .cart-bottom{
+            position: sticky;
+            bottom: 0px;
+            width: 100%;
+            height: 30%;
+            border-top: 1px solid #eee;
+            background-color: white;
+            ul{
+                line-height: 30px;
+                font-size: 15px;
+                padding: 0;
+                margin: 0;
+                li{
+                    margin: 0;
+                    display: flex;
+                    justify-content: space-between;
+                    span:nth-child(even){
+                        font-weight: 500;
+                    }
+                }
+            }
+            .buttons{
+                width: 100%;
+                padding: 10px 0;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                button{
+                    font-size: 14px;
+                    height: 40px;
+                    width: 49%;
+                    border: none;
+                    background-color:#EB4D50;
+                    color: white;
+                    transition: 0.5s;
+                    &:hover{
+                        background-color: #232323;
+                    }
+                    &:nth-child(2){
+                        background-color: #232323;
+                    }
+                    &:nth-child(2):hover {
+                        background-color:#EB4D50;
+                    }
+                }
+            }
+        }
+
           .box_device {
             li {
               border-bottom: 1px solid black;
@@ -169,8 +236,7 @@ header {
         }
       }
       .box.active {
-        visibility: visible;
-        opacity: 1;
+        width: 350px;
       }
     }
     .search_input_large {
@@ -221,7 +287,7 @@ header {
         visibility: hidden;
         opacity: 0;
         position: absolute;
-        top: 30px;
+        top: 50px;
         left: 50px;
         transition: 0.3s all;
         .icon_search {
@@ -236,7 +302,7 @@ header {
       }
       .user_mobile_registration {
         text-align: start;
-        top: 3%;
+        top: 7%;
         right: 0;
         visibility: hidden;
         opacity: 0;
@@ -261,11 +327,12 @@ header {
   .mobile-menu {
     overflow: hidden;
     position: relative;
-    top: -34px;
+    top: 0%;
     background-color: rgb(255, 255, 255);
     width: 0px;
     height: 100vh;
-    transition: 1s;
+    transition: 1s all;
+    z-index: 100;
     ul {
       padding: 10px;
       li {
@@ -293,12 +360,7 @@ header {
   }
   
   .mobile-menu.active {
-    position: relative;
     width: 200px;
-    height: 100vh;
-    top: -34px;
-    background-color: rgb(255, 255, 255);
-    transition: 1s;
   }
 
 }
