--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,72 +124,6 @@ header .big-size-container .row .icons .box {
   z-index: 1;
   overflow: hidden;
 }
-header .big-size-container .row .icons .box .cart-list {
-  width: 100%;
-  height: 100%;
-}
-header .big-size-container .row .icons .box .cart-list .product-list {
-  overflow-y: scroll;
-  overflow-x: hidden;
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-header .big-size-container .row .icons .box .cart-list .product-list li {
-  margin: 0;
-}
-header .big-size-container .row .icons .box .cart-list .product-list li p {
-  margin: 50% auto;
-  text-align: center;
-  color: #adadad;
-}
-header .big-size-container .row .icons .box .cart-bottom {
-  position: sticky;
-  bottom: 0px;
-  width: 100%;
-  height: 30%;
-  border-top: 1px solid #eee;
-  background-color: white;
-}
-header .big-size-container .row .icons .box .cart-bottom ul {
-  line-height: 30px;
-  font-size: 15px;
-  padding: 0;
-  margin: 0;
-}
-header .big-size-container .row .icons .box .cart-bottom ul li {
-  margin: 0;
-  display: flex;
-  justify-content: space-between;
-}
-header .big-size-container .row .icons .box .cart-bottom ul li span:nth-child(even) {
-  font-weight: 500;
-}
-header .big-size-container .row .icons .box .cart-bottom .buttons {
-  width: 100%;
-  padding: 10px 0;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-header .big-size-container .row .icons .box .cart-bottom .buttons button {
-  font-size: 14px;
-  height: 40px;
-  width: 49%;
-  border: none;
-  background-color: #EB4D50;
-  color: white;
-  transition: 0.5s;
-}
-header .big-size-container .row .icons .box .cart-bottom .buttons button:hover {
-  background-color: #232323;
-}
-header .big-size-container .row .icons .box .cart-bottom .buttons button:nth-child(2) {
-  background-color: #232323;
-}
-header .big-size-container .row .icons .box .cart-bottom .buttons button:nth-child(2):hover {
-  background-color: #EB4D50;
-}
 header .big-size-container .row .icons .box .box_device li {
   border-bottom: 1px solid black;
   padding: 15px;
@@ -232,21 +166,27 @@ header .big-size-container .row .box.active {
 header .big-size-container .search_input_large {
   visibility: hidden;
   opacity: 0;
-  position: absolute;
+  position: relative;
   top: 70%;
   right: 5%;
   transition: 0.3s all;
 }
+header .big-size-container .search_input_large .input_div {
+  position: absolute;
+  right: 0;
+}
 header .big-size-container .search_input_large .icon_search {
   position: absolute;
   top: 0px;
-  right: 3px;
+  right: 0px;
 }
 header .big-size-container .search_input_large.active {
   visibility: visible;
   opacity: 1;
 }
 header .big-size-container .user_registration {
+  width: 35%;
+  top: 71%;
   right: 8%;
   visibility: hidden;
   opacity: 0;
