--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -164,6 +164,7 @@ header .big-size-container .row .box.active {
   width: 350px;
 }
 header .big-size-container .search_input_large {
+  width: 100%;
   visibility: hidden;
   opacity: 0;
   position: relative;
@@ -793,6 +794,7 @@ header .mobile-menu.active {
   padding: 10px;
 }
 #latest .caption .add_cart {
+  color: white;
   display: flex;
   justify-content: center;
   align-items: center;
