--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -175,6 +175,7 @@ header {
       }
     }
     .search_input_large {
+      width: 100%;
       visibility: hidden;
       opacity: 0;
       position: relative;
@@ -894,6 +895,7 @@ header {
   .caption {
     padding: 10px;
     .add_cart {
+      color: white;
       display: flex;
       justify-content: center;
       align-items: center;
